# avlc

Project1/: CMakeLists.txt
Project1/src/math/: math.h
Project1/src/math/circle/: circle.h
Project1/src/math/float/: float.h
Project1/src/math/point/: point.cpp
Project1/src/utils/: utils.h
Project2/: main.py
Project2/game/: Caption.py  Color.py  Curve.py  LinearEquation.py  Point.py  Render.py  Window.py  all.py
ProjectSomething/: app.py  main.py  requirements.txt  simplex.py
src/: circle.gnu  main.cpp
src/math/circle/: circle.cpp
src/math/float/: float.cpp
src/math/point/: point.h
src/math/trigonometry/: trigonometry.cpp  trigonometry.h
src/utils/: macros.h  misc.h  plot.h
